Fixed About Me section covering the navbar.
The About Me section was covering the navbar.

Added a margin to the top of the about section.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -261,3 +261,7 @@ color: black;
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.about-container {
+  margin-top: 80px;
+}
